Gencode/Test/Valide/arithmetique_simple.deca
// Description:
//    tests opération arithmétique simple
//
// Resultats:
//		Opération valide du test arithmétique
// 
// Attributs: exec correct automatique
//
// Historique:
//    cree le 12/01/2012

{
println("40 + 2 = ",40+2);
println("50 - 8 = ",50-8);
println("-42 = ", -42);
println("6 * 6 = ", 6*6);
println("6 % 5 = ", 6%5);
println("9 / 3 = ", 9/3);
println("9+9+9+9+9+9+9 = ", 9+9+9+9+9+9+9);
println("5*2*5*2 = ", 5*2*5*2);
println("-1-1-1-1-1 = ", -1-1-1-1-1);
println("40/2/2/2 = ", 40/2/2/2);
println("10%6%5%3 = ", 10%6%5%3);
println("(3+3+3)*(3+3+3) / 2 = ", (3+3+3)*(3+3+3) / 2);
println("(3+3+3)*(3+3+3)*(3+3+3)*(3+3+3)*(3+3+3)*(3+3+3) / 2 = ", (3+3+3)*(3+3+3)*(3+3+3)*(3+3+3)*(3+3+3)*(3+3+3) / 2);
println("(1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)))))))))) = ", (1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)*((1+1)))))))))));
println("3.0+0.2 = ", 3.0+0.2);
println("2.0-0.2 = ", 2.0-0.2 );
println("2.0 * 0.5 = ", 2.0 * 0.5 );
println("3.0 / 1.5 = ", 3.0 / 1.5 );
println("(1.5+1.3)*((1.3+1.5)*((1.5+1.3)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)))))))))) = ", (1.5+1.3)*((1.3+1.5)*((1.5+1.3)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)*((1.3+1.5)))))))))));
println(" (1+3.5) = ", (1+3.5));
}
